<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/half_white"
    android:padding="@dimen/_18sdp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/_8sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_to_continue"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/_25sdp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/grocery"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:id="@+id/et_login_email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_14ssp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Password is required"
                android:id="@+id/tv_error_login_pass"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_10ssp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:textSize="@dimen/_14ssp"
                    android:id="@+id/et_login_pass"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@color/colorPrimary"
                android:textColor="@color/half_white"
                android:textSize="@dimen/_16ssp"
                android:padding="@dimen/_8sdp"
                android:onClick="doLogin"
                android:id="@+id/btn_login"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_18sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:onClick="doSignUp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginStart="@dimen/_3sdp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>