<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:fitsSystemWindows="true"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/grocery"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:id="@+id/et_name"
                    android:inputType="text"
                    android:textSize="@dimen/_14ssp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_14ssp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/delivery_address"
                    android:inputType="textPostalAddress"
                    android:id="@+id/et_delivery_address"
                    android:textSize="@dimen/_14ssp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:text="123456789"
                    android:textSize="@dimen/_14ssp"
                    android:id="@+id/et_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Password is required"
                android:id="@+id/tv_error"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_10ssp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/confirm_password"
                    android:text="123456789"
                    android:id="@+id/et_confirm_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_14ssp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Password is not matching"
                android:id="@+id/tv_error_not_matching"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_10ssp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_5sdp"/>

            <LinearLayout
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:orientation="vertical">
                <fragment
                    android:id="@+id/autocomplete_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@color/colorPrimary"
                android:textColor="@color/half_white"
                android:textSize="@dimen/_14ssp"
                android:padding="@dimen/_8sdp"
                android:onClick="doSignUp"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/_18sdp"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/_8sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:onClick="doLogin"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginStart="@dimen/_3sdp"
                    />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>



</LinearLayout>